crates/rayban/tests/compile_fail/two_rayban.stderr
error: use exactly one of `rayban_root`, `rayban`, or `rayban_path`
 --> tests/compile_fail/two_rayban.rs:5:1
  |
5 | #[rayban(path = P2, resolved = R)]
  | ^
